# starlette-html

./: AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
examples/: __init__.py
examples/basic/: README.md  __init__.py  app.py
examples/basic/components/: __init__.py  app_sidebar.py  sidebar.py
examples/basic/components/primitives/: __init__.py  sidebar.py
examples/basic/layouts/: base.py
examples/basic/pages/: home_page.py
src/starlette_html/: __init__.py  core.py  starlette.py  tags.py
tests/: __init__.py  core_test.py  render_as_test.py  starlette_test.py  tags_test.py
